[package]
name = "rust-vulkan-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
cgmath = "0.18.0"
log = { version = "0.4.21", features = ["max_level_debug"] }
png = "0.17.13"
pretty_env_logger = "0.5.0"
thiserror = "1.0.58"
tobj = { version = "4.0.2", features = ["log"] }
vulkanalia = { version = "0.23.0", features = ["libloading", "provisional", "window"] }
winit = "0.29.15"

